header complete, 10 percent main done too

--- a/index.html
+++ b/index.html
@@ -4,9 +4,89 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shahmeer | My Portfolio</title>
+  <title>Shahmeer Asim</title>
+  <!-- Css -->
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand&display=swap" rel="stylesheet">
+  <!-- Javascript -->
+  <script src="https://kit.fontawesome.com/fe1ef81de4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>My Portfolio</h1>
+  <header>
+    <div class="primary-header-content">
+      <div class="get-in-touch">
+        <i class="fa-regular fa-envelope icon"></i>
+        <a href="mailto:shahmeerasim1999@gmail.com">Get in touch</a>
+      </div>
+      <div class="socials">
+        <a href="https://www.linkedin.com/in/shahmeer-asim-457b13239/" target="_blank" title="LinkedIn">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/Shahhmeeer" target="_blank" title="Github">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.instagram.com/shahh_meeer/" target="_blank" title="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </header>
+  <main class="primary-main">
+    <div class="my-introduction">
+      <div class="avatar"></div>
+      <div class="my-name">
+        <h2>Greetings!</h2>
+      </div>
+      <div class="my-description">
+        <p>My name is Shahmeer and I recently completed my Bachelors degree in Computer Science. I am currently looking for a place to polish my Coding, Communication and Social Skills. I am sure that I will be a great asset for your company as I am a quick learner and enjoy learning new skills. I am also good at searching the optimal solutions for a current problem but ofcourse working with your company, I'm sure I will improve much more and will add great value to your company. I hope to hear from you as I will be more than happy to be working under your supervision. Thanks in advance and Best Regards!</p>
+      </div>
+    </div>
+    <div class="blogs-section" id="blogs-section">
+      <div class="blog blog1">
+        <div class="blog-image"></div>
+        <div class="blog-description">
+          <div class="blog-heading">
+            <h1>Anime discussion should become common in Pakistan</h1>
+          </div>
+          <div class="blog-date">
+            <p>March/5th/2023</p>
+          </div>
+          <div class="blog-short-description">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
+          </div>
+        </div>
+      </div>
+      <div class="blog blog1">
+        <div class="blog-image"></div>
+        <div class="blog-description">
+          <div class="blog-heading">
+            <h1>Anime discussion should become common in Pakistan</h1>
+          </div>
+          <div class="blog-date">
+            <p>March/5th/2023</p>
+          </div>
+          <div class="blog-short-description">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
+          </div>
+        </div>
+      </div>
+      <div class="blog blog1">
+        <div class="blog-image"></div>
+        <div class="blog-description">
+          <div class="blog-heading">
+            <h1>Anime discussion should become common in Pakistan</h1>
+          </div>
+          <div class="blog-date">
+            <p>March/5th/2023</p>
+          </div>
+          <div class="blog-short-description">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
