--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </header>
-  <main class="primary-main">
+  <main>
     <div class="my-introduction">
       <div class="avatar"></div>
       <div class="my-name">
@@ -42,51 +42,87 @@
       <div class="my-description">
         <p>My name is Shahmeer and I recently completed my Bachelors degree in Computer Science. I am currently looking for a place to polish my Coding, Communication and Social Skills. I am sure that I will be a great asset for your company as I am a quick learner and enjoy learning new skills. I am also good at searching the optimal solutions for a current problem but ofcourse working with your company, I'm sure I will improve much more and will add great value to your company. I hope to hear from you as I will be more than happy to be working under your supervision. Thanks in advance and Best Regards!</p>
       </div>
+      <div class="follow-up-button">
+        <a href="#">Learn More</a>
+      </div>
     </div>
-    <div class="blogs-section" id="blogs-section">
-      <div class="blog blog1">
-        <div class="blog-image"></div>
-        <div class="blog-description">
-          <div class="blog-heading">
-            <h1>Anime discussion should become common in Pakistan</h1>
+    <div class="my-skills-section">
+      <h1>What I Do</h1>
+      <div class="skills-section">
+        <div class="skill application-dev">
+          <div class="icon-and-name">
+            <div class="skill-icon">
+              <i class="fa-solid fa-mobile-screen-button icon"></i>
+            </div>
+            <div class="skill-name">
+              <h2>Application Development</h2>
+            </div>
           </div>
-          <div class="blog-date">
-            <p>March/5th/2023</p>
+          <div class="skill-description">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
           </div>
-          <div class="blog-short-description">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
-          </div>
-        </div>
-      </div>
-      <div class="blog blog1">
-        <div class="blog-image"></div>
-        <div class="blog-description">
-          <div class="blog-heading">
-            <h1>Anime discussion should become common in Pakistan</h1>
-          </div>
-          <div class="blog-date">
-            <p>March/5th/2023</p>
-          </div>
-          <div class="blog-short-description">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
+          <div class="read-more-button">
+            <a href="#">View Projects</a>
           </div>
         </div>
-      </div>
-      <div class="blog blog1">
-        <div class="blog-image"></div>
-        <div class="blog-description">
-          <div class="blog-heading">
-            <h1>Anime discussion should become common in Pakistan</h1>
+        <div class="skill web-dev">
+          <div class="icon-and-name">
+            <div class="skill-icon">
+              <i class="fa-solid fa-mobile-screen-button icon"></i>
+            </div>
+            <div class="skill-name">
+              <h2>Application Development</h2>
+            </div>
           </div>
-          <div class="blog-date">
-            <p>March/5th/2023</p>
+          <div class="skill-description">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
           </div>
-          <div class="blog-short-description">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur maxime tempore pariatur. Repellendus culpa quod modi! Enim quis ullam libero rem recusandae, sit ducimus, ea reiciendis, est ipsa velit aliquam! Aspernatur tempore quas quam omnis reprehenderit labore tenetur officiis odit? Veritatis quaerat ducimus placeat fuga! Error repellat beatae eligendi dolore.</p>
+          <div class="read-more-button">
+            <a href="#">View Projects</a>
+          </div>
+        </div>
+        <div class="skill writing">
+          <div class="icon-and-name">
+            <div class="skill-icon">
+              <i class="fa-solid fa-mobile-screen-button icon"></i>
+            </div>
+            <div class="skill-name">
+              <h2>Application Development</h2>
+            </div>
+          </div>
+          <div class="skill-description">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+          </div>
+          <div class="read-more-button">
+            <a href="#">View Projects</a>
+          </div>
+        </div>
+        <div class="skill singing">
+          <div class="icon-and-name">
+            <div class="skill-icon">
+              <i class="fa-solid fa-mobile-screen-button icon"></i>
+            </div>
+            <div class="skill-name">
+              <h2>Application Development</h2>
+            </div>
+          </div>
+          <div class="skill-description">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+          </div>
+          <div class="read-more-button">
+            <a href="#">View Projects</a>
           </div>
         </div>
       </div>
     </div>
   </main>
+  <section class="quote-section">
+    <h1>Few things my fellow Developers can understand!</h1>
+    <div class="quotes">
+      <div class="quote quote1">Things aren't always #000000 #FFFFFF</div>
+      <div class="quote quote2">Expected ; at the end</div>
+      <div class="quote quote3">If-Else >>> AI</div>
+    </div>
+  </section>
 </body>
 </html>
