added the descriptions

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
               <i class="fa-solid fa-mobile-screen-button icon"></i>
             </div>
             <div class="skill-name">
-              <h2>Application Development</h2>
+              <h2>Application <br> Development</h2>
             </div>
           </div>
           <div class="skill-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+            <p>I recently started learning mobile application development (Flutter) few months ago, and it compeletly fits right with my interest. Flutter as a framework is something that I thoroughly enjoy building apps on.</p>
           </div>
           <div class="read-more-button">
             <a href="#">View Projects</a>
@@ -68,14 +68,14 @@
         <div class="skill web-dev">
           <div class="icon-and-name">
             <div class="skill-icon">
-              <i class="fa-solid fa-mobile-screen-button icon"></i>
+              <i class="fa-solid fa-code icon"></i>
             </div>
             <div class="skill-name">
-              <h2>Application Development</h2>
+              <h2>Website <br> Development</h2>
             </div>
           </div>
           <div class="skill-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+            <p>Website development (frontend) is the first and only thing that I started during my University that I still love doing. Building cool layouts with just HTML, CSS & Vanilla Javascript is really something that helps me keep learning more.</p>
           </div>
           <div class="read-more-button">
             <a href="#">View Projects</a>
@@ -84,17 +84,17 @@
         <div class="skill writing">
           <div class="icon-and-name">
             <div class="skill-icon">
-              <i class="fa-solid fa-mobile-screen-button icon"></i>
+              <i class="fa-solid fa-pencil icon"></i>
             </div>
             <div class="skill-name">
-              <h2>Application Development</h2>
+              <h2>Writing</h2>
             </div>
           </div>
           <div class="skill-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+            <p>Writing is something that I do when I dont feel like doing anything else. I write Short Stories, Blogs, and sometimes Life Experiences. I still am learning to improve my writing skills though, but I hope you'll enjoy reading.</p>
           </div>
           <div class="read-more-button">
-            <a href="#">View Projects</a>
+            <a href="#">Things I wrote</a>
           </div>
         </div>
         <div class="skill singing">
@@ -103,14 +103,14 @@
               <i class="fa-solid fa-mobile-screen-button icon"></i>
             </div>
             <div class="skill-name">
-              <h2>Application Development</h2>
+              <h2>Music/Singing</h2>
             </div>
           </div>
           <div class="skill-description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum odio quisquam quod corporis blanditiis sequi adipisci, pariatur, fuga exercitationem illo vero non alias totam repudiandae nisi aut asperiores. Fugit, molestias?</p>
+            <p>I can say this with confidence that before I started my journey as a Developer, Singing was something that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music </p>
           </div>
           <div class="read-more-button">
-            <a href="#">View Projects</a>
+            <a href="#">My Instagram</a>
           </div>
         </div>
       </div>
@@ -124,5 +124,19 @@
       <div class="quote quote3">If-Else >>> AI</div>
     </div>
   </section>
+  <footer>
+    <p>&copy; 2023 All rights reserved.</p>
+    <div class="socials">
+      <a href="https://www.linkedin.com/in/shahmeer-asim-457b13239/" target="_blank" title="LinkedIn">
+        <i class="fa-brands fa-linkedin-in"></i>
+      </a>
+      <a href="https://github.com/Shahhmeeer" target="_blank" title="Github">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.instagram.com/shahh_meeer/" target="_blank" title="Instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+    </div>
+  </footer>
 </body>
 </html>
