complete description added with favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="./assets/programmer.png" type="image/x-icon">
   <!-- Javascript -->
   <script src="https://kit.fontawesome.com/fe1ef81de4.js" crossorigin="anonymous"></script>
 </head>
@@ -100,14 +101,14 @@
         <div class="skill singing">
           <div class="icon-and-name">
             <div class="skill-icon">
-              <i class="fa-solid fa-mobile-screen-button icon"></i>
+              <i class="fa-solid fa-music icon"></i>
             </div>
             <div class="skill-name">
               <h2>Music/Singing</h2>
             </div>
           </div>
           <div class="skill-description">
-            <p>I can say this with confidence that before I started my journey as a Developer, Singing was something that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music </p>
+            <p>I can say this with confidence that before I started my journey as a Developer, Singing was something that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music. Singing makes me feel "like an artist"</p>
           </div>
           <div class="read-more-button">
             <a href="#">My Instagram</a>
