--- a/index.html
+++ b/index.html
@@ -116,15 +116,35 @@
         </div>
       </div>
     </div>
-  </main>
-  <section class="quote-section">
-    <h1>Few things my fellow Developers can understand!</h1>
-    <div class="quotes">
-      <div class="quote quote1">Things aren't always #000000 #FFFFFF</div>
-      <div class="quote quote2">Expected ; at the end</div>
-      <div class="quote quote3">If-Else >>> AI</div>
+    <section class="quote-section">
+      <h1>Few things my fellow Developers can understand!</h1>
+      <div class="quotes">
+        <div class="quote quote1">Things aren't always #000000 #FFFFFF</div>
+        <div class="quote quote2">Expected ; at the end</div>
+        <div class="quote quote3">If-Else >>> AI</div>
+      </div>
+    </section>
+    <div class="contact-me-section">
+      <h1>Drop me a Message!</h1>
+      <div class="form-section">
+        <form>
+          <div class="name-input">
+            <input autocapitalize="sentences" required type="text" placeholder="First Name" name="first-name" class="name">
+            <input autocapitalize="sentences" required type="text" placeholder="Last Name" name="last-name" class="name">
+          </div>
+          <div class="email-address">
+            <input required type="email", placeholder="email@xyz.com" name="email-address" class="name">
+          </div>
+          <div class="user-text">
+            <textarea autocapitalize="sentences" required name="message" id="user-message" cols="40" rows="10" placeholder="Your Message"></textarea>
+          </div>
+          <div class="submit-area">
+            <input type="submit" value="Send" class="send-button">
+          </div>
+        </form>
+      </div>
     </div>
-  </section>
+  </main>
   <footer>
     <p>&copy; 2023 All rights reserved.</p>
     <div class="socials">
