--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="contact-me-section">
       <h1>Drop me a Message!</h1>
       <div class="form-section">
-        <form>
+        <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
           <div class="name-input">
             <input autocapitalize="sentences" required type="text" placeholder="First Name" name="first-name" class="name">
             <input autocapitalize="sentences" required type="text" placeholder="Last Name" name="last-name" class="name">
@@ -138,6 +138,7 @@
           <div class="user-text">
             <textarea autocapitalize="sentences" required name="message" id="user-message" cols="40" rows="10" placeholder="Your Message"></textarea>
           </div>
+          <div data-netlify-recaptcha="true"></div>
           <div class="submit-area">
             <input type="submit" value="Send" class="send-button">
           </div>
