minor styling changes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <p>My name is Shahmeer and I recently completed my Bachelors degree in Computer Science. I am currently looking for a place to polish my Coding, Communication and Social Skills. I am sure that I will be a great asset for your company as I am a quick learner and enjoy learning new skills. I am also good at searching the optimal solutions for a current problem but ofcourse working with your company, I'm sure I will improve much more and will add great value to your company. I hope to hear from you as I will be more than happy to be working under your supervision. Thanks in advance and Best Regards!</p>
       </div>
       <div class="follow-up-button">
-        <a href="#">Learn More</a>
+        <a href="#skill-section">My tech stack</a>
       </div>
     </div>
-    <div class="my-skills-section">
+    <div class="my-skills-section" id="skill-section">
       <h1>What I Do</h1>
       <div class="skills-section">
         <div class="skill application-dev">
