added the stories section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>My name is Shahmeer and I recently completed my Bachelors degree in Computer Science. I am currently looking for a place to polish my Coding, Communication and Social Skills. I am sure that I will be a great asset for your company as I am a quick learner and enjoy learning new skills. I am also good at searching the optimal solutions for a current problem but ofcourse working with your company, I'm sure I will improve much more and will add great value to your company. I hope to hear from you as I will be more than happy to be working under your supervision. Thanks in advance and Best Regards!</p>
       </div>
       <div class="follow-up-button">
-        <a href="#skill-section">My tech stack</a>
+        <a href="#skill-section">Things I do</a>
       </div>
     </div>
     <div class="my-skills-section" id="skill-section">
@@ -63,7 +63,7 @@
             <p>I recently started learning mobile application development (Flutter) few months ago, and it compeletly fits right with my interest. Flutter as a framework is something that I thoroughly enjoy building apps on.</p>
           </div>
           <div class="read-more-button">
-            <a href="#">View Projects</a>
+            <a href="./pages/app-dev-projects.html">View Projects</a>
           </div>
         </div>
         <div class="skill web-dev">
@@ -79,7 +79,7 @@
             <p>Website development (frontend) is the first and only thing that I started during my University that I still love doing. Building cool layouts with just HTML, CSS & Vanilla Javascript is really something that helps me keep learning more.</p>
           </div>
           <div class="read-more-button">
-            <a href="#">View Projects</a>
+            <a href="./pages/web-projects.html">View Projects</a>
           </div>
         </div>
         <div class="skill writing">
@@ -95,7 +95,7 @@
             <p>Writing is something that I do when I dont feel like doing anything else. I write Short Stories, Blogs, and sometimes Life Experiences. I still am learning to improve my writing skills though, but I hope you'll enjoy reading.</p>
           </div>
           <div class="read-more-button">
-            <a href="#">Things I wrote</a>
+            <a href="./pages/thoughts-stories.html">Things I wrote</a>
           </div>
         </div>
         <div class="skill singing">
@@ -111,7 +111,7 @@
             <p>I can say this with confidence that before I started my journey as a Developer, Singing was something that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music. Singing makes me feel "like an artist"</p>
           </div>
           <div class="read-more-button">
-            <a href="#">My Instagram</a>
+            <a href="https://www.youtube.com/@averageguy985/featured" target="_blank">My Youtube</a>
           </div>
         </div>
       </div>
@@ -138,7 +138,6 @@
           <div class="user-text">
             <textarea autocapitalize="sentences" required name="message" id="user-message" cols="40" rows="10" placeholder="Your Message"></textarea>
           </div>
-          
           <div class="submit-area">
             <input type="submit" value="Send" class="send-button">
           </div>
