added the first story

--- a/pages/stories-and-blogs/story1.html
+++ b/pages/stories-and-blogs/story1.html
@@ -5,8 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thirsty Crow | Short Story</title>
+  <link rel="stylesheet" href="./stories.css/story.css">
 </head>
 <body>
-  
+  <div class="bread-crumbs">
+    <ul>
+      <li><a href="../../index.html">My Profile</a></li>
+      <span class="seperate">/</span> 
+      <li><a href="../thoughts-stories.html">Stories & Thoughts</a></li>
+      <span class="seperate">/</span>
+      <li><a href="./story1.html">Thirsty Crow</a></li>
+    </ul>
+  </div>
+  <div class="compelete-story-section">
+    <p class="compelete-story">The technology, human evolution, and liveable environment has gotten to a point where everything's inside the reach of your single tap. Living in such environment, this story is about a crow who's entire life was spent sitting on those buildings, looking at those mean but somewhat spiritual Humans. Living there, he, the crow thought: "Why can't there be a place, a place where there's no buildings that takes up the entire sky, no land walking piece of machinery causing that ear bleeding noise, and most of all, those parasites of a humans." This thought, just like the crow sitting on that building, you, you laying on your bed, sitting in your office, or simply idle walking in a park, can have this as well.<br><span class="space"></span> Now the question is, What should one do? Just wait for the Almighty to give signs? Or try to figure something out himself? Well, the crow did the same, he tried to figure something out by himself. He flew, flew in the direction of the wind that blew on his featheres. Saw the beautiful sun set, and promised himself: "I won't give up. There's a place far beyond. I will reach there, I won't choose to die the way my fellows did. " Filled with all these positive emotions, the crow finally escaped that noise, the noise that made the ear bleed. He looked, and just looked. "Ah, The Peace. The Silence", said the crow. "I fulfilled the promise that I made to myself." The crow finally laughed. The mountain, the clouds falling on it, the trees far beyond, everything, was beautiful. His thirst to made a change for his life finally came to happen. A thirst that made his life a living proof, that God's only going to help you if you take the first step. Take it, and you'll be able to finally quench your thirst.<br><span class="space"></span> The End. </p>
+  </div>
 </body>
 </html>
