--- a/pages/thoughts-stories.html
+++ b/pages/thoughts-stories.html
@@ -9,14 +9,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Quicksand&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./assets/programmer.png" type="image/x-icon">
-  <link rel="stylesheet" href="./pages-css/blog-stories.css">
+  <link rel="stylesheet" href="./pages-css/thoughts-stories.css">
 </head>
 <body>
   <div class="bread-crumbs">
     <ul>
       <li><a href="../index.html">My Profile</a></li>
       <span class="seperate">/</span> 
-      <li><a href="./blog-stories.html">Stories & Thoughts</a></li>
+      <li><a href="./thoughts-stories.html">Stories & Thoughts</a></li>
     </ul>
   </div>
   <main>
@@ -34,7 +34,7 @@
                 <p>Thirsty, a word to define someone's need to achieve something. It might be thirst for being powerful, thirst for getting attention, or thirst for just a single sip of water. We've all heard about how a crow got thirsty and threw pebbles in the sand jar to drink the water and quench the thirst and flew away, but this time, let's rewrite the entire story. Let's rewrite the meaning of thirst for the crow this time.</p>
               </div>
               <div class="read-more-button">
-                <a href="./stories and blogs/story1.html">Continue Reading</a>
+                <a href="./stories-and-blogs/story1.html">Continue Reading</a>
               </div>
             </div>
           </div>
