--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 fits right with my interest. Flutter as a framework is something that I thoroughly enjoy building apps
                 on.</p>
             </div>
-            <div class="read-more-button">
+            <!-- <div class="read-more-button">
               <a href="./pages/app-dev-projects.html">View Projects</a>
-            </div>
+            </div> -->
           </div>
           <div class="skill web-dev">
             <div class="icon-and-name">
@@ -92,79 +92,80 @@
                 still love doing. Building cool layouts with just HTML, CSS & Vanilla Javascript is really something
                 that helps me keep learning more.</p>
             </div>
-            <div class="read-more-button">
+            <!-- <div class="read-more-button">
               <a href="./pages/web-projects.html">View Projects</a>
             </div>
-          </div>
-          <div class="skill writing">
-            <div class="icon-and-name">
-              <div class="skill-icon">
-                <i class="fa-solid fa-pencil icon"></i>
+          </div> -->
+            <div class="skill writing">
+              <div class="icon-and-name">
+                <div class="skill-icon">
+                  <i class="fa-solid fa-pencil icon"></i>
+                </div>
+                <div class="skill-name">
+                  <h2>Writing</h2>
+                </div>
               </div>
-              <div class="skill-name">
-                <h2>Writing</h2>
+              <div class="skill-description">
+                <p>Writing is something that I do when I dont feel like doing anything else. I write Short Stories,
+                  Blogs,
+                  and sometimes Life Experiences. I still am learning to improve my writing skills though, but I hope
+                  you'll enjoy reading.</p>
               </div>
-            </div>
-            <div class="skill-description">
-              <p>Writing is something that I do when I dont feel like doing anything else. I write Short Stories, Blogs,
-                and sometimes Life Experiences. I still am learning to improve my writing skills though, but I hope
-                you'll enjoy reading.</p>
-            </div>
-            <div class="read-more-button">
-              <a href="./pages/thoughts-stories.html">Things I wrote</a>
-            </div>
-          </div>
-          <div class="skill singing">
-            <div class="icon-and-name">
-              <div class="skill-icon">
-                <i class="fa-solid fa-music icon"></i>
-              </div>
-              <div class="skill-name">
-                <h2>Music/Singing</h2>
+              <div class="read-more-button">
+                <a href="./pages/thoughts-stories.html">Things I wrote</a>
               </div>
             </div>
-            <div class="skill-description">
-              <p>I can say this with confidence that before I started my journey as a Developer, Singing was something
-                that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music.
-                Singing makes me feel "like an artist"</p>
-            </div>
-            <div class="read-more-button">
-              <a href="https://www.youtube.com/@averageguy985/featured" target="_blank">My Youtube</a>
+            <div class="skill singing">
+              <div class="icon-and-name">
+                <div class="skill-icon">
+                  <i class="fa-solid fa-music icon"></i>
+                </div>
+                <div class="skill-name">
+                  <h2>Music/Singing</h2>
+                </div>
+              </div>
+              <div class="skill-description">
+                <p>I can say this with confidence that before I started my journey as a Developer, Singing was something
+                  that I enjoyed very much. Bathroom singing, yes! I still feel the same energy listening to music.
+                  Singing makes me feel "like an artist"</p>
+              </div>
+              <div class="read-more-button">
+                <a href="https://www.youtube.com/@averageguy985/featured" target="_blank">My Youtube</a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <section class="quote-section">
-        <h1>Few things my fellow Developers can understand!</h1>
-        <div class="quotes">
-          <div class="quote quote1">Things aren't always #000000 #FFFFFF</div>
-          <div class="quote quote2">Expected ; at the end</div>
-          <div class="quote quote3">If-Else >>> AI</div>
+        <section class="quote-section">
+          <h1>Few things my fellow Developers can understand!</h1>
+          <div class="quotes">
+            <div class="quote quote1">Things aren't always #000000 #FFFFFF</div>
+            <div class="quote quote2">Expected ; at the end</div>
+            <div class="quote quote3">If-Else >>> AI</div>
+          </div>
+        </section>
+        <div class="contact-me-section">
+          <h1>Drop me a Message!</h1>
+          <div class="form-section">
+            <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+              <div class="name-input">
+                <input autocapitalize="sentences" required type="text" placeholder="First Name" name="first-name"
+                  class="name">
+                <input autocapitalize="sentences" required type="text" placeholder="Last Name" name="last-name"
+                  class="name">
+              </div>
+              <div class="email-address">
+                <input required type="email" , placeholder="email@xyz.com" name="email-address" class="name">
+              </div>
+              <div class="user-text">
+                <textarea autocapitalize="sentences" required name="message" id="user-message" cols="40" rows="10"
+                  placeholder="Your Message"></textarea>
+              </div>
+              <div class="submit-area">
+                <input type="submit" value="Send" class="send-button">
+              </div>
+            </form>
+          </div>
         </div>
-      </section>
-      <div class="contact-me-section">
-        <h1>Drop me a Message!</h1>
-        <div class="form-section">
-          <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
-            <div class="name-input">
-              <input autocapitalize="sentences" required type="text" placeholder="First Name" name="first-name"
-                class="name">
-              <input autocapitalize="sentences" required type="text" placeholder="Last Name" name="last-name"
-                class="name">
-            </div>
-            <div class="email-address">
-              <input required type="email" , placeholder="email@xyz.com" name="email-address" class="name">
-            </div>
-            <div class="user-text">
-              <textarea autocapitalize="sentences" required name="message" id="user-message" cols="40" rows="10"
-                placeholder="Your Message"></textarea>
-            </div>
-            <div class="submit-area">
-              <input type="submit" value="Send" class="send-button">
-            </div>
-          </form>
-        </div>
-      </div>
     </main>
     <footer>
       <p>&copy; 2023 All rights reserved.</p>
